6.2 고립된 단위테스트